workspace/log/build_2020-08-20_14-18-41/turtlebot3_navigation/stderr.log
  File "/home/gustavo/workspace/install/turtlebot3_navigation/lib/python3.8/site-packages/turtlebot3_navigation/navigation_node.py", line 26
    def main(args=None):
    ^
SyntaxError: invalid syntax

